plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id "org.sonarqube" version "5.1.0.4882"
}

group = 'fitness-app-be'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}


dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// API Handling and JSON Parsing
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// MySQL and ORM
	implementation 'mysql:mysql-connector-java:8.0.33'

	// Lombok
	implementation 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
	testImplementation 'org.springframework.security:spring-security-test'

	// Cloudinary
	implementation 'com.cloudinary:cloudinary-http44:1.27.0'
}


task populateMeals(type: JavaExec) {
	classpath = sourceSets.main.runtimeClasspath
	mainClass = 'com.yourpackage.MainClass'
	args = ['populateMeals']
}



sonar {
	properties {
		property "sonar.projectKey", "FitnessApp"
		property "sonar.projectName", "FitnessApp"
		property "sonar.qualitygate.wait", true
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
